set arduino service

--- a/src/app/views/dashboard/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard/dashboard.component.html
@@ -2,7 +2,10 @@
   <div class="container-fluid">
     <div class="card">
       <div class="card-content">
-        <h5>Dash Works</h5>
+        <button class="btn btn-simple btn-info btn-icon edit" matTooltip="LIGAR/DESLIGAR" [matTooltipPosition]="'left'"
+          (click)="ligaDesliga()">
+          <i class="material-icons">edit</i>
+        </button>
       </div>
     </div>
   </div>
