--- a/src/app/views/cadastro/dentista-list/dentista-list.component.html
+++ b/src/app/views/cadastro/dentista-list/dentista-list.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <button (click)="showModal()" class="btn btn-parking btn-raised pull-right">
-          <i class="material-icons">add</i> Categoria
+          <i class="material-icons">add</i> Dentista
         </button>
         <div class="card">
           <div class="card-header card-header-icon" data-background-color="parking">
@@ -11,7 +11,7 @@
           </div>
           <div class="card-content">
             <h5 class="card-title">
-              <strong>Lista de Categorias</strong>
+              <strong>Lista de Dentistas</strong>
             </h5>
 
             <div class="row">
@@ -30,6 +30,18 @@
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Nome
                   </mat-header-cell>
                   <mat-cell *matCellDef="let item"> {{ item.name }} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="cro">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> CRO
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let item"> {{ item.cro }} </mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="telefone">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Telefone
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let item"> {{ item.telefone }} </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="acoes">
@@ -54,7 +66,7 @@
               <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
             </div>
           </div>
-          <app-category-form #categoryModal></app-category-form>
+          <app-dentista-form #dentistaModal></app-dentista-form>
         </div>
       </div>
     </div>
