--- a/src/app/views/cadastro/cliente-list/cliente-list.component.html
+++ b/src/app/views/cadastro/cliente-list/cliente-list.component.html
@@ -25,7 +25,7 @@
 
             <div class="example-container">
 
-              <mat-table #table [dataSource]="dataSource" matSort>
+              <mat-table #table [dataSource]="clientes" matSort>
                 <ng-container matColumnDef="name">
                   <mat-header-cell *matHeaderCellDef mat-sort-header> Nome
                   </mat-header-cell>
