--- a/src/app/views/cadastro/funcionario-list/funcionario-list.component.html
+++ b/src/app/views/cadastro/funcionario-list/funcionario-list.component.html
@@ -26,7 +26,7 @@
 
                         <div class="example-container">
 
-                            <mat-table #table [dataSource]="dataSource" matSort>
+                            <mat-table #table [dataSource]="funcionarios" matSort>
                                 <ng-container matColumnDef="name">
                                     <mat-header-cell *matHeaderCellDef mat-sort-header> Nome
                                     </mat-header-cell>
