--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav #navbar class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
-        <div class="navbar-minimize">
+        <!-- <div class="navbar-minimize">
             <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
                 <i class="material-icons visible-on-sidebar-regular">more_vert</i>
                 <i class="material-icons visible-on-sidebar-mini">view_list</i>
             </button>
-        </div>
+        </div> -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" (click)="sidebarToggle()">
                 <span class="sr-only">Toggle navigation</span>
@@ -13,7 +13,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{getPath()}}"> {{getTitle()}} </a>
+            <a class="navbar-brand" href="{{getPath()}}"></a>
         </div>
         <div class="collapse navbar-collapse justify-content-end mt-2 mr-3 " id="navigation">
             <div (window:resize)="onResize($event)">
@@ -27,7 +27,11 @@
                                 <a (click)="showPriceDetails()" style="cursor: pointer">Tabela de Preços</a>
                             </li> -->
                             <li>
-                                <a href="#/report/" target="_blanc" style="cursor: pointer">Gerar relátorio</a>
+                                <a style="cursor: pointer">Relátorio de clientes</a>
+                                <a style="cursor: pointer">Relátorio de consultas</a>
+                                <a style="cursor: pointer">Relátorio de contas a receber</a>
+                                <a style="cursor: pointer">Relátorio de produtos</a>
+                                <a style="cursor: pointer">Relátorio de procedimentos</a>
                             </li>
                         </ul>
                     </li>
