--- a/src/app/views/cadastro/funcionario-list/funcionario-list.component.html
+++ b/src/app/views/cadastro/funcionario-list/funcionario-list.component.html
@@ -54,7 +54,7 @@
                                         </button>
                                         <button class="btn btn-simple btn-danger btn-icon edit" matTooltip="Excluir"
                                             [matTooltipPosition]="'left'" data-toggle="modal"
-                                            (click)="deleteItem(item)">
+                                            (click)="deleteItem()">
                                             <i class="material-icons">delete</i>
                                         </button>
                                     </mat-cell>
