--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,10 +1,7 @@
 <div class="logo">
     <div class="logo-normal">
-        <div class="logo-img">
-            <img src="/assets/img/logo/logo1.png" />
-        </div>
         <a href="#" class="simple-text">
-            Smart Irrigation
+            Consultório Odontológico
         </a>
     </div>
 </div>
