--- a/src/app/views/cadastro/produto-list/produto-list.component.html
+++ b/src/app/views/cadastro/produto-list/produto-list.component.html
@@ -52,7 +52,7 @@
                       <i class="material-icons">edit</i>
                     </button>
                     <button class="btn btn-simple btn-danger btn-icon edit" matTooltip="Excluir"
-                      [matTooltipPosition]="'left'" data-toggle="modal" (click)="deleteItem(item)">
+                      [matTooltipPosition]="'left'" data-toggle="modal" (click)="deleteItem()">
                       <i class="material-icons">delete</i>
                     </button>
                   </mat-cell>
